--- a/HTM&CSS-Exam/index.html
+++ b/HTM&CSS-Exam/index.html
@@ -28,27 +28,29 @@
 
     <main>
       <section id="hero">
-        <div class="container-hero">
+        <div class="container">
           <div class="hero-content">
-            <img class="logo" src="./images/logo.png" alt="AXIT Logo" />
-            <h1>MODERN AXURE TEMPLATE FOR&nbsp;BEAUTIFUL PROTOTYPES</h1>
-            <hr class="devider-whit">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.
-            </p>
-            <a href="#" class="btn">Download</a>
-          </div>
-          <div class="trial-form">
-            <form action="" class="try-form">
-              <h2>Try Your <span>FREE</span> Trial Today</h2>
-              <div class="form-inputs">
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-              </div>
-              <button type="submit" class="btn btn-form">Get Started</button>
-            </form>
+            <div class="hero-left">
+              <img class="logo" src="./images/logo.png" alt="AXIT Logo" />
+              <h2>MODERN AXURE TEMPLATE FOR&nbsp;BEAUTIFUL PROTOTYPES</h2>
+              <hr class="devider-whit">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.
+              </p>
+              <a href="#" class="hero-btn-left">Download</a>
+            </div>
+            <div class="trial-form">
+              <form action="" class="try-form">
+                <h3>Try Your <span>FREE</span> Trial Today</h3>
+                <div class="form-inputs">
+                  <input type="text" placeholder="Name">
+                  <input type="email" placeholder="Email">
+                  <input type="password" placeholder="Password">
+                </div>
+                <button type="submit" class="btn-form">Get Started</button>
+              </form>
+            </div>
           </div>
         </div>
       </section>
@@ -57,7 +59,7 @@
         <div class="container">
           <div class="brand-content">
             <div class="brand-text">
-              <h2>Social Media</h2>
+              <h3>Social Media</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
               </p>
@@ -84,7 +86,7 @@
               <button class="tab-btn" data-tab="tab-3">TAB 3</button>
             </div>
             <div class="tabs-text">
-              <h2>Tabs with soft transitioning effect.</h2>
+              <h3>Tabs with soft transitioning effect.</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
@@ -105,7 +107,7 @@
           <div class="feature-2-content">
             <img src="./images/image_left_sub_list_u260.png" alt="Sub List Image">
             <div class="sub-list-section">
-              <h2>Sub list section</h2>
+              <h3>Sub list section</h3>
               <hr class="devider-orange-left">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
@@ -141,7 +143,7 @@
         <div class="container">
           <div class="feature-3-content">
             <div class="standard-picture-text">
-              <h2>Standard Picture Section</h2>
+              <h3>Standard Picture Section</h3>
               <hr class="devider-orange-left">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
@@ -209,16 +211,44 @@
             </p>
             <div class="pricing-tables">
               <div class="pricing-table">
-                <h3>Basic</h3>
-                <p class="price">$0</p>
+                <div class="table-top">
+                  <h3>Basic</h3>
+                  <p><span>$</span>0</p>
+                  <a href="#" class="payment-btn active">Free for Life</a>
+                </div>
+                <p>1 GB OF SPACE</p>
+                <p>10 GB OF BANDWIDTH</p>
+                <p>3 WEBSITES</p>
+                <p>BASIC CUSTOMIZATION</p>
+                <p>WORDPRESS INTEGRATION</p>
+                <p>EMAIL SUPPORT</p>
               </div>
               <div class="pricing-table">
-                <h3>Professional</h3>
-                <p class="price">$19</p>
+                <div class="table-top">
+                  <h3>Professional</h3>
+                  <p><span>$</span>19</p>
+                  <a href="#" class="payment-btn">Monthly Payment</a>
+                  <a href="#" class="popular-btn">Our Most Popular</a>
+                </div>
+                <p>5 GB OF SPACE</p>
+                <p>50 GB of bandwidth</p>
+                <p>12 WEBSITES</p>
+                <p>ADVANCED CUSTOMIZATION</p>
+                <p>WORDPRESS INTEGRATION</p>
+                <p>EMAIL SUPPORT</p>
               </div>
               <div class="pricing-table">
-                <h3>Enterprise</h3>
-                <p class="price">$70</p>
+                <div class="table-top">
+                  <h3>Enterprise</h3>
+                  <p><span>$</span>70</p>
+                  <a href="#" class="payment-btn">Monthly Payment</a>
+                </div>
+                <p>UNLIMITED SPACE</p>
+                <p>UNLIMITED BANDWIDTH</p>
+                <p>100 WEBSITES</p>
+                <p>ADVANCED CUSTOMIZATION</p>
+                <p>WORDPRESS INTEGRATION</p>
+                <p>24/7 CUSTOMER SUPPORT</p>
               </div>
             </div>
           </div>
@@ -229,11 +259,11 @@
         <div class="container">
           <div class="testimonials-content">
             <h2>WHAT OUR CUSTOMERS ARE SAYING</h2>
-            <hr class="devider-orange">
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <hr class="devider-orange-30">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="testimonials">
               <div class="testimonial">
-                <div class="styled-blok">
+                <div class="styled-block">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
                   similique odio aspernatur ex, architecto eaque quo suscipit.
                 </div>
@@ -242,7 +272,7 @@
                 <p>Manager</p>
               </div>
               <div class="testimonial">
-                <div class="styled-blok">
+                <div class="styled-block">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
                   similique odio aspernatur ex, architecto eaque quo suscipit.
                 </div>
@@ -251,7 +281,7 @@
                 <p>Freelancer</p>
               </div>
               <div class="testimonial">
-                <div class="styled-blok">
+                <div class="styled-block">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
                   similique odio aspernatur ex, architecto eaque quo suscipit.
                 </div>
